plugins {
    id 'java'
    id 'idea'
}

version = '1.0-SNAPSHOT'

base {
    archivesName = 'minicat'
}

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        url = uri('https://repo.papermc.io/repository/maven-public/')
    }
    maven {
        url = uri('https://jitpack.io')
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

def defaultEncoding = 'UTF-8'
compileJava{
    options.encoding = defaultEncoding
}
compileTestJava{
    options.encoding = defaultEncoding
}
dependencies {
    compileOnly 'com.google.guava:guava:33.6.0-jre'
    compileOnly 'commons-io:commons-io:2.21.0'
    compileOnly 'commons-lang:commons-lang:2.6'
    compileOnly 'com.mysql:mysql-connector-j:9.6.0'
    compileOnly 'BielAPI:BielAPI:0.0.10-SNAPSHOT'
    compileOnly fileTree(dir: 'lib', include: '*.jar', exclude: [
            'BielAPI-*.jar',
            'NametagEdit*.jar',
            'spigot-*.jar'
    ])
    compileOnly 'io.papermc.paper:paper-api:26.2.build.92-stable'
    compileOnly('com.github.decentsoftware-eu.decentholograms:plugin:2.10.1') {
        transitive = false
    }
    testCompileOnly 'io.papermc.paper:paper-api:26.2.build.92-stable'

}
configurations.testCompileOnly.extendsFrom(configurations.compileOnly)

['SquidMotionTest', 'SquidCollisionTest', 'InkStreamTest', 'InkWarsMovementTest', 'ObsidianInteractionsTest', 'ObsidianGoldScoreTest', 'ObsidianWatchtowersTest', 'ObsidianTeamUpgradesTest', 'MinionOwnershipTest'].each { testClass ->
    def packageName = testClass in ['InkWarsMovementTest', 'ObsidianInteractionsTest', 'ObsidianGoldScoreTest', 'ObsidianWatchtowersTest', 'ObsidianTeamUpgradesTest', 'MinionOwnershipTest'] ? 'com.biel.lobby.mapes.jocs.' : 'com.biel.lobby.mapes.jocs.inkwars.'
    def regressionTask = tasks.register(testClass, JavaExec) {
        dependsOn testClasses
        javaLauncher = javaToolchains.launcherFor { languageVersion = JavaLanguageVersion.of(25) }
        classpath = sourceSets.test.runtimeClasspath + configurations.testCompileClasspath + configurations.compileClasspath
        mainClass = packageName + testClass
    }
    tasks.named('check') { dependsOn regressionTask }
}

task deploy(type: Copy){

    from('build/libs') {
        include '**/*.jar'
    }
    into 'F:\\Servers MC\\Lobby - 1.9\\plugins'
}
deploy.dependsOn assemble

tasks.named('test') {
    // Standalone regression entrypoints are executed by check's JavaExec tasks.
    failOnNoDiscoveredTests = false
}

tasks.register('verifyGameGuide', JavaExec) {
    dependsOn testClasses
    classpath = sourceSets.test.runtimeClasspath + configurations.testCompileClasspath
    mainClass = 'com.biel.lobby.guide.GameGuideTest'
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(25)
    }
}
tasks.named('check') {
    dependsOn 'verifyGameGuide'
}

tasks.register('MinionRetreatTest', JavaExec) {
    dependsOn testClasses
    classpath = sourceSets.test.runtimeClasspath + configurations.testCompileClasspath + configurations.compileClasspath
    mainClass = 'com.biel.lobby.minions.MinionRetreatTest'
    javaLauncher = javaToolchains.launcherFor { languageVersion = JavaLanguageVersion.of(25) }
}
tasks.named('check') { dependsOn 'MinionRetreatTest' }

tasks.register('calibrateObsidianLaunchers', JavaExec) {
    dependsOn testClasses
    classpath = sourceSets.test.runtimeClasspath + configurations.testCompileClasspath
    mainClass = 'com.biel.lobby.mapes.jocs.ObsidianLauncherCalibration'
    javaLauncher = javaToolchains.launcherFor { languageVersion = JavaLanguageVersion.of(25) }
    doFirst { args project.property('launcherSurvey'), project.property('launcherReport') }
}
